disabled fixed sidebar for now, works bad on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,6 @@ border: 5px dashed black;
   height: auto;
 }
 
-.wrapper {
+/*.wrapper {
 position: fixed;
-}
+}*/
